Add python venv to .gitignore (#22045)
* Add python venv to .gitignore

* Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ lib/libesp32/berry/berry
 .vscode/extensions.json
 *.bak
 *.code-workspace
+
+## Python virtual environments for Platformio ##
+venv
+.venv
